* vmux: don't print errors to stdout, print to stderr instead, to keep stream clean
* functions called by vmux: don't print messages to stdout.
* vdifspec: allow passing of bchan and echan to m5spec
* python2 -> python3
* new utility: splitVDIFbygap : breaks a VDIF file into multiple based on time gaps
* filterVDIF: discard frames that had seconds less than previous frames

Version 1.4
~~~~~~~~~~~
* New helper functions to read VDIF file while pre-arranging data to be more palatable for the memory based vdifmux()
  - vdifreaderOpen(), vdifreaderRead(), vdifreaderSeek()
* New utility: reorderVDIF based upon vdifreaderRead()
* Version for DiFX-2.6, Mar 4, 2019

Version 1.3
~~~~~~~~~~~
* Move all pure Mark6 functionality to mark6sg
* Python utils: explicitly call python2
* More conformant help and version information: printVDIFheader
* vdifmux(): change logic to determine first frame number if not explicitly provided -> simplified and probably faster and possibly more correct code.
* vdifmux(): make more robust in some parameter corner cases
* vdifmux(): nSort is now entirely referring to input frames; previously there was some use regarding output frames
* printVDIFheader: minor update for discerning two EDV Version 2 sub(sub)versions (EHT R2DBE, ALMA)

Version 1.2
~~~~~~~~~~~
* Post DiFX-2.5
* Some improvements in multiplexing very sparse data
* Options in vmux to change gap/sort tuning parameters
* Added ability to summarize a mark6 module in a specific slot
* new corner turners:
  - 1-bit with 32, 64 threads
  - 2-bit with 32, 64 threads
  - 4-bit with 32, 64 threads
  - 8-bit with 32, 64 threads
  - 16-bit with 32, 64 threads
  - 32-bit with 32, 64 threads
  - 64-bit with 32, 64 threads
  - 128-bit with 32, 64 threads
* Mark6Gatherer gets module serial number for mark6 activity message

Version 1.1
~~~~~~~~~~~
* Post DiFX-2.4
* Added incrementVDIFHeader
* Added ctypes-based Python bindings and one example (vdifio_1.py)
* vsum: error message -> stderr, not stdout