@@ -9,6 +9,7 @@ Version 1.5
 * python2 -> python3
 * new utility: splitVDIFbygap : breaks a VDIF file into multiple based on time gaps
 * filterVDIF: discard frames that had seconds less than previous frames
+* introduce #define'd error codes for some common functions
 
 Version 1.4
 ~~~~~~~~~~~
